--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -14,4 +14,54 @@
     font-weight: bold;
     font-size: 16px;
   }
+
+  .top-image {
+    background: linear-gradient(rgba(57, 62, 78, 0.6), rgba(57, 62, 78, 0.6)), image-url('facade.jpg');
+    background-size: cover;
+    height:100vh;
+    width:100vw;
+  }
+
+  .text-top {
+    position: relative;
+    padding: 100px 20px;
+    vertical-align:middle;
+    text-align:center;
+    font-family: 'Montserrat', sans-serif;
+  }
+
+  .text-middle {
+    display:flex;
+    justify-content:space-around;
+    align-items: center;
+    padding: 0 200px
+  }
+
+      
+
 }
+
+#informations {
+  margin-top:30px;
+  font-family: 'Cabin', sans-serif !important;
+
+  .souligne {
+    text-decoration:underline;
+  }
+}
+
+.mt-30 {
+  margin-top:30px;
+}
+
+.card-alex {
+  display:flex;
+  border: solid grey 1px;
+  align-items:center;
+  justify-content: space-around;
+  padding-top:10px;
+  padding-bottom:10px;
+  padding-right:20px;
+}
+
+
